--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>940</width>
+    <width>1250</width>
     <height>500</height>
    </rect>
   </property>
@@ -83,17 +83,22 @@
         </row>
         <column>
          <property name="text">
-          <string>Название</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
           <string>Описание</string>
          </property>
         </column>
         <column>
          <property name="text">
-          <string>Выполнен</string>
+          <string>Количество</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Выполнено</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Процент выполнения</string>
          </property>
         </column>
        </widget>
@@ -102,6 +107,13 @@
        <widget class="QPushButton" name="pushButton_2">
         <property name="text">
          <string>Сохранить</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_3">
+        <property name="text">
+         <string>отправить</string>
         </property>
        </widget>
       </item>
@@ -114,7 +126,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>940</width>
+     <width>1250</width>
      <height>17</height>
     </rect>
    </property>
