--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -98,7 +98,7 @@
         </column>
         <column>
          <property name="text">
-          <string>Процент выполнения</string>
+          <string>Прогресс</string>
          </property>
         </column>
        </widget>
